--- a/week02/styles/bom.css
+++ b/week02/styles/bom.css
@@ -35,10 +35,10 @@ input[type="text"] {
 }
 
 button {
-    /* margin-top: 1rem; */
     padding: 0.6rem;
     font-size: 1rem;
     cursor: pointer;
+    margin-top: 1em;
 }
 
 .chapter-list {
@@ -63,4 +63,5 @@ button.delete {
     color: #f44336;
     font-size: 1.5rem;
     cursor: pointer;
+    margin-top: 0;
 }
