--- a/week02/styles/temples.css
+++ b/week02/styles/temples.css
@@ -11,7 +11,7 @@ body {
     font-family: 'Lora', serif;
     line-height: 1.6;
     margin: 0;
-    background-color: var(--light-gray);
+    background-color: #DDD;
     color: var(--dark-blue);
 }
 
@@ -52,7 +52,7 @@ nav ul li a {
     text-decoration: none;
     color: var(--yellow);
     font-weight: bold;
-    padding: 0.5rem;
+    padding: 0.75rem;
     transition: background-color 0.3s;
 }
 
