--- a/week04/styles/lazyload.css
+++ b/week04/styles/lazyload.css
@@ -24,6 +24,9 @@ main {
 .image-container {
     display: block;
     text-align: center;
+    /* background-color: #fff;
+    width: 90%;
+    margin: 0 auto; */
 }
 
 .image-container img {
