--- a/week04/styles/filtered-temples.css
+++ b/week04/styles/filtered-temples.css
@@ -83,18 +83,39 @@ figure {
     padding: 1rem;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s;
+}
+
+figure:hover {
+    transform: translateY(-5px);
 }
 
 figure img {
     max-width: 100%;
     height: auto;
     border-radius: 8px;
+    opacity: 0;
+    animation: fadeIn 1.5s ease-in forwards;
+    transition: transform 0.3s;
+}
+
+figure img:hover {
+    transform: scale(1.05);
 }
 
 figcaption {
     margin-top: 0.5rem;
     font-style: italic;
     color: var(--dark-green);
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
 
 footer {
@@ -165,14 +186,6 @@ footer {
         grid-template-columns: repeat(2, 1fr);
         gap: 1.5rem;
     }
-
-    figure {
-        transition: transform 0.3s;
-    }
-
-    figure:hover {
-        transform: translateY(-5px);
-    }
 }
 
 @media (min-width: 1200px) {
@@ -194,13 +207,5 @@ footer {
     .temple-grid {
         grid-template-columns: repeat(3, 1fr);
         gap: 1.5rem;
-    }
-
-    figure {
-        transition: transform 0.3s;
-    }
-
-    figure:hover {
-        transform: translateY(-5px);
     }
 }
