--- a/week03/styles/place.css
+++ b/week03/styles/place.css
@@ -83,8 +83,9 @@ main {
     color: #fff;
     padding: 0.5rem;
     border-radius: 4px;
-    display: flex;
-    align-items: center;
+    display: flex; /* Flexbox for alignment */
+    align-items: center; /* Vertically center items */
+    justify-content: space-between; /* Add spacing between the title and the icon */
 }
 
 .weather-icon {
@@ -92,12 +93,6 @@ main {
     margin-left: 0.5rem;
     display: inline-flex;
     align-items: center;
-}
-
-.weather-icon img {
-    width: 35px;
-    height: 35px;
-    margin-left: 0.5rem;
 }
 
 .data ul, .weather ul {
@@ -133,6 +128,14 @@ footer p {
 
     .data, .weather {
         grid-column: span 1;
+    }
+
+    .weather h2 {
+        justify-content: flex-start; /* Ensure alignment starts from the left */
+    }
+
+    .weather-icon {
+        margin-left: 1rem; /* Add space between the text and the icon in wider view */
     }
 }
 
