--- a/styles/place.css
+++ b/styles/place.css
@@ -88,11 +88,30 @@ main {
     justify-content: space-between; /* Add spacing between the title and the icon */
 }
 
-.weather-icon {
-    font-size: 1.5rem;
+.weather-icon img {
+    width: 35px;
+    height: 35px;
     margin-left: 0.5rem;
-    display: inline-flex;
-    align-items: center;
+    display: inline-block;
+}
+
+/* Pseudo-element for large view */
+@media (min-width: 768px) {
+    .weather h2::after {
+        content: "⛅"; /* Emoji for large view */
+        font-size: 1.5rem;
+        margin-left: 0.5rem;
+    }
+
+    .weather-icon {
+        display: none; /* Hide the SVG in larger view */
+    }
+}
+
+@media (max-width: 767px) {
+    .weather h2::after {
+        content: ""; /* Remove the pseudo-element for mobile */
+    }
 }
 
 .data ul, .weather ul {
