--- a/project/styles/sitePlanStyles.css
+++ b/project/styles/sitePlanStyles.css
@@ -95,6 +95,28 @@ body {
     font-weight: bold;
   }
   
+  .hero {
+    background-color: #fff; /* White background */
+    text-align: center;
+    padding: 3em 1em;
+    border: #000 2px solid;
+  }
+  
+  .hero-content {
+    max-width: 800px;
+    margin: 0 auto;
+  }
+  
+  .hero-subheading {
+    font-family: 'Delius', sans-serif;
+    font-size: 1.5rem; /* Slightly larger for better visibility */
+    color: var(--primary-color);
+    margin-bottom: -16px;
+    transform: rotate(-8deg); /* Rotate for style */
+    font-weight: bold;
+    display: inline-block; /* Prevent unexpected line wrapping */
+  }
+  
   .hero-heading {
     font-size: 3rem;
     font-weight: bold;
