--- a/project/styles/sitePlanStyles.css
+++ b/project/styles/sitePlanStyles.css
@@ -48,6 +48,7 @@ main {
     display: flex;
     flex-wrap: wrap;
     gap: 2em;
+    background-color: #f7f7f7;
 }
 
 aside {
@@ -109,9 +110,9 @@ body {
   
   .hero-subheading {
     font-family: 'Delius', sans-serif;
-    font-size: 1.5rem; /* Slightly larger for better visibility */
+    font-size: 1.1rem; /* Slightly larger for better visibility */
     color: var(--primary-color);
-    margin-bottom: -16px;
+    margin-bottom: -25px;
     transform: rotate(-8deg); /* Rotate for style */
     font-weight: bold;
     display: inline-block; /* Prevent unexpected line wrapping */
