--- a/project/styles/nvt_base.css
+++ b/project/styles/nvt_base.css
@@ -941,7 +941,7 @@ text-decoration: none;
   grid-template-columns: repeat(4, 1fr);
   gap: 1.5rem;
   max-width: 1200px;
-  margin: 0 auto;
+  margin: 0 1rem;
 }
 
 .specialty-card {
@@ -986,12 +986,14 @@ text-decoration: none;
   top: 20px;
   align-self: flex-start;
   font-size: 1.5rem;
+  margin-left: 1rem;
 }
 
 .experience-cards {
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  margin-right: 1rem;
 }
 
 .experience-card {
@@ -1006,6 +1008,7 @@ text-decoration: none;
   display: block;
   font-weight: bold;
   margin-top: 0.5rem;
+
 }
 
 .experience-date {
@@ -1019,6 +1022,7 @@ text-decoration: none;
   justify-content: center;
   align-items: center;
   padding: 4rem 2rem;
+  margin: 0 1rem;
 }
 
 .cta-container {
@@ -1068,7 +1072,7 @@ text-decoration: none;
   grid-template-columns: repeat(3, 1fr);
   gap: 2rem;
   margin-bottom: 1.5rem;
-  text-align: left;
+  /* text-align: left; */
   max-width: 1220px;
   margin: 0 auto;
 }
