--- a/project/styles/nvt_base.css
+++ b/project/styles/nvt_base.css
@@ -185,7 +185,7 @@ header {
         color: var(--secondary-purple) !important;
       }
       .color-black{
-        color: var(#000000) !important;
+        color: #000000 !important;
       }
       
       .heading {
@@ -333,7 +333,7 @@ header {
 
 /* Adjust positioning so it overlaps the third section */
 .overlapping-image {
-  margin-bottom: -7em; /* Adjust based on the third section */
+  margin-bottom: -5em; /* Adjust based on the third section */
 }
 
 /* Services Grid */
